# Cryptobazaar

./: Cargo.toml  README.md
benches/: auctioneer_r1.rs  auctioneer_r2.rs  convertbenchmark.rs  encode.rs  encoder.rs  ipa.rs  lderivative.rs  loadtoandfromdevice.rs  msmbenchmark.rs  nonzero.rs  nttbenchmark.rs  veceq.rs
src/: acc.rs  auctioneer.rs  auditor.rs  bid_encoder.rs  bidder.rs  double_ipa.rs  double_pedersen_schnorr.rs  fold_lagrange.rs  gates.rs  ipa.rs  kzg.rs  lib.rs  pedersen_schnorr.rs  transcript.rs  univariate_sumcheck.rs  utils.rs  verifiable_folding_sumcheck.rs  zk_log_derivative.rs
src/acc/: structs.rs  tr.rs
src/auctioneer/: av_oracle.rs  enums.rs
src/auditor/: auctioneer.rs
src/double_ipa/: structs.rs  tr.rs
src/double_pedersen_schnorr/: structs.rs  tr.rs
src/fold_lagrange/: structs.rs  tr.rs
src/gates/: structs.rs  tr.rs
src/ipa/: structs.rs  tr.rs
src/kzg/: lagrange.rs
src/pedersen_schnorr/: structs.rs  tr.rs
src/univariate_sumcheck/: structs.rs  tr.rs
src/utils/: folding.rs  srs.rs
src/verifiable_folding_sumcheck/: structs.rs  tr.rs
src/zk_log_derivative/: structs.rs  tr.rs
