[package]
name = "cryptobazaar"
version = "0.1.0"
edition = "2024"

[dependencies]
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.9.2" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.9.2"  }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v3.9.2"  }

merlin = "3.0.0"

ark-serialize = "0.4"
ark-std = "0.4"

rand = "0.8.5"

criterion = { version = "0.4", features = ["html_reports"] }

[dev-dependencies]
rand_chacha = "0.3.1"

[[bench]]
name = "veceq"
harness = false

[[bench]]
name = "nonzero"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "lderivative"
harness = false

[[bench]]
name = "ipa"
harness = false

[[bench]]
name = "auctioneer_r1"
harness = false

[[bench]]
name = "auctioneer_r2"
harness = false

[[bench]]
name = "msmbenchmark"
harness = false

[[bench]]
name = "convertbenchmark"
harness = false

[[bench]]
name = "testparts"
harness = false

[[bench]]
name = "nttbenchmark"
harness = false
